syntax = "proto3";
package kvs;

service KVS {
    rpc insertItem(InsertionRequest) returns (InsertionResponse) {}
    rpc getItem(GetRequest) returns (GetResponse) {}
}

message InsertionRequest {
    string key = 1;
    string value = 2;
}

message InsertionResponse {
    bool success = 1;
}

message GetRequest {
    string key = 1;
}

message GetResponse {
    string key = 1;
    string value = 2;
}